<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.login.login.LoginScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_gradient_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:contentDescription="@string/login_app_logo_image_view"
            android:src="@drawable/ic_login_screen_logo">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:paddingTop="5dp"
            android:text="@string/login_app_subtitle"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/account_email_field_title"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="#9C9C9C"
                android:textCursorDrawable="@null"
                android:textSize="18sp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress">

            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:hint="@string/account_password_field_title"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="#9C9C9C"
                android:textCursorDrawable="@null"
                android:textSize="18sp"
                android:autofillHints="password"
                android:inputType="textPassword">

            </EditText>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="#2F6FEC"
                android:text="@string/login_login_button_title"
                android:textColor="@color/white">

            </Button>

            <Button
                android:id="@+id/bt_create_new_account"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/transparent_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/login_new_account_button_title"
                android:textColor="@color/white"
                app:backgroundTint="@null">

            </Button>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acb_sign_in_with_google"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_btn_login_google"
                android:paddingStart="32dp"
                android:paddingEnd="36dp"
                android:text="@string/login_google_login_button_title"
                android:textColor="@color/white"
                app:backgroundTint="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>