<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.login.forgotpassword.ForgotPasswordFragment">

    <Space
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/receipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Space>

    <LinearLayout
        android:id="@+id/receipt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bt_send_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/account_phone_field_title"
            android:textColor="@color/white"
            android:textSize="16sp">

        </TextView>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/account_phone_field_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#9C9C9C"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:autofillHints="phone"
            android:inputType="phone">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/account_email_field_title"
            android:textColor="@color/white"
            android:textSize="16sp">

        </TextView>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/account_email_field_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#9C9C9C"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/account_cpf_field_title"
            android:textColor="@color/white"
            android:textSize="16sp">

        </TextView>

        <EditText
            android:id="@+id/et_cpf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/account_cpf_field_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#9C9C9C"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:autofillHints="number"
            android:inputType="number">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/bt_send_verification"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="#2F6FEC"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/account_send_verification_link_button_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>