<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.login.newaccount.CreateNewAccountFragment">

    <Space
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Space>

    <ScrollView
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_name_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:layout_marginBottom="@dimen/edittext_vertical_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/account_name_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:autofillHints="name"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_phone_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:layout_marginBottom="@dimen/edittext_vertical_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/account_phone_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:inputType="phone"
                android:autofillHints="phone">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_email_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:layout_marginBottom="@dimen/edittext_vertical_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/account_email_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_cpf_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:layout_marginBottom="@dimen/edittext_vertical_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/account_cpf_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:autofillHints="number"
                android:inputType="number">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_password_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:layout_marginBottom="@dimen/edittext_vertical_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:hint="@string/account_password_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:autofillHints="password"
                android:inputType="textPassword">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginEnd="@dimen/account_field_title_textview_horizontal_margin"
                android:layout_marginBottom="@dimen/account_field_title_textview_vertical_margin"
                android:text="@string/account_confirm_field_title"
                android:textColor="@color/white"
                android:textSize="@dimen/account_field_title_textview_text_size">

            </TextView>

            <EditText
                android:id="@+id/et_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/edittext_horizontal_margin"
                android:layout_marginEnd="@dimen/edittext_horizontal_margin"
                android:background="@drawable/rounded_edit_text"
                android:imeOptions="actionNext"
                android:hint="@string/account_confirm_field_hint"
                android:paddingStart="@dimen/edittext_horizontal_paddings"
                android:paddingEnd="@dimen/edittext_horizontal_paddings"
                android:textColor="@color/cardview_dark_background"
                android:textColorHint="@color/edittext_text_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edittext_text_size"
                android:autofillHints="password"
                android:inputType="textPassword">

            </EditText>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_agree"
                style="@style/CardView.Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/account_agree_switch_button_horizontal_margin"
                android:layout_marginEnd="@dimen/account_agree_switch_button_horizontal_margin"
                android:layout_marginTop="@dimen/account_agree_switch_button_vertical_margin"
                android:text="@string/account_agree_terms_field"
                android:textColor="@color/white"
                android:textSize="@dimen/account_agree_switch_button_text_size">

            </androidx.appcompat.widget.SwitchCompat>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:backgroundTint="@color/light_blue"
                android:text="@string/account_register_button_title"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>